<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/linearLayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:onClick="searchRecetas"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_app" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_ingredientes_disponibles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ingredientes_disponibles"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:hint="@string/ingredientes_incluir"
        app:helperText="@string/obligatorio"
        app:helperTextEnabled="true"
        app:helperTextTextColor="?attr/colorPrimary"
        android:padding="8dp"
        app:endIconDrawable="@drawable/baseline_local_pizza_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ingredientes_disponibles"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ChipGroup para Ingredientes Bloqueados -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_ingredientes_bloqueados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Ingredientes bloqueados TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ingredientes_bloqueados"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:hint="@string/ingredientes_excluir"
        app:helperText="@string/opcional"
        app:helperTextEnabled="true"
        android:padding="8dp"
        app:endIconDrawable="@drawable/baseline_no_food_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ingredientes_bloqueados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <TextView-->
    <!--        android:id="@+id/tv_tiempo_preparacion"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="¡Elige tu tiempo máximo!"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:textAppearance="?attr/textAppearanceHeadline6"-->
    <!--        android:gravity="center_horizontal" />-->
    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="8dp" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_tiempo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_time"
        app:helperText="@string/opcional"
        app:helperTextEnabled="true"
        android:padding="8dp"
        app:endIconDrawable="@drawable/baseline_more_time_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tiempo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_spinner_dieta"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Dieta"
        app:helperText="@string/opcional"
        android:padding="8dp">

        <Spinner
            android:id="@+id/spinner_dieta_opciones"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="Dieta" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_generar_recetas"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_gradient"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="searchRecetas"
        android:text="@string/search"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ver_favoritas"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="verFavoritos"
        android:text="@string/favorites"
        app:backgroundTint="@null" />

</LinearLayout>